fet : multiple api call in moviedetail page is changed into a single api call

--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,12 @@ body{
 }
 *::-webkit-scrollbar {
     width: 0;
-    height: 1.4vh;
+    height: 1.3vh;
   }
   
   *::-webkit-scrollbar-track {
     background-color: transparent;
-    margin: 0 15px;
+    /* margin: 0 15px; */
   }
   
   *::-webkit-scrollbar-thumb {
